# boa

./: .github-plugin-test.md  .gitignore  AGENTS.md  BOA.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  flake.nix
.github/scripts/: get-flake-npm-hash.sh  set-flake-npm-hash.sh
.github/workflows/: cachix-push.yml  ci.yml  nix-npm-hash-fix-pr.yml  nix-npm-hash.yml  open-release-pr.yml  prepare-release.yml  release.yml  tests.yml
acp-worker/aoe-agent/: package-lock.json  package.json
acp-worker/test-shim/: package-lock.json  package.json
aoe-plugin-api/src/: capability.rs  lib.rs  manifest.rs
aoe-plugin-api/tests/: manifest.rs
cockpit-worker/test-shim/: shim.mjs
contrib/hermes-skill/: SKILL.md
contrib/openclaw-skill/: SKILL.md
docker/: Dockerfile
docs/: api.md  cockpit.md  development.md  features.md  github-integration.md  index.md  installation.md  plugin-api.md  plugins.md  push-notifications.md  quick-start.md  sounds.md  structured-view.md  telemetry.md
docs/assets/web/: README.md
docs/cli/: reference.md
docs/cockpit/: interface.md  multi-agent.md  troubleshooting.md
docs/development/: adding-agents.md  adding-settings.md  logging.md  playwright.md  releases.md  web-dashboard.md  writing-plugins.md
docs/development/internals/: plugin-system.md  sandbox.md  sessions.md  structured-view.md
docs/guides/: agent-override.md  apple-containers.md  configuration.md  diff-view.md  live-mode.md  mcp-servers.md  multi-repo-workspaces.md  podman.md  remote-phone-access.md  repo-config.md  sandbox.md  scratch-sessions.md  session-fork.md  session-resume.md  shell-completions.md  tmux-status-bar.md  tool-sessions.md  web-dashboard.md  workflow.md  worktrees.md
docs/guides/web/: dashboard.md  settings.md  terminal.md
docs/hooks/: recovery.md
docs/structured-view/: controls.md  interface.md  troubleshooting.md
marketing/x/: README.md  exports.example.sh  mint_token.py  post_to_x.py  requirements.txt
plugins/: featured.toml
scripts/: boa-deploy.sh  build-site.sh  install-hooks.sh
scripts/hooks/: post-commit
src/: agent_profiles.rs  agents.rs  lib.rs  logging.rs  main.rs  tips.rs
src/acp/: acp_client.rs  agent_compat.rs  agent_registry.rs  auto_provision.rs  event_store.rs  mod.rs  protocol.rs  state.rs  supervisor.rs
src/acp/client/: daemon_manager.rs  discovery.rs  http.rs
src/cli/: acp.rs  add.rs  cockpit.rs  definition.rs  group.rs  killall.rs  log_level.rs  logs.rs  mcp.rs  mod.rs  plugin.rs  profile.rs  project.rs  remove.rs  send.rs  serve.rs  session.rs  sounds.rs  telemetry.rs  theme.rs  tmux.rs  uninstall.rs  update.rs  url.rs  worktree.rs
src/cockpit/: acp_client.rs  agent_compat.rs  agent_profiles.rs  agent_registry.rs  context_primer.rs  event_store.rs  install_hints.rs  mod.rs  permissions.rs  state.rs  supervisor.rs
src/events/: mod.rs
src/github/: client.rs  error.rs
src/hooks/: dir_guard.rs  mod.rs
src/plugin/: auto_update.rs  cli_graft.rs  core_overrides.rs  discover.rs  featured.rs  grants.rs  install.rs  integrity.rs  launch.rs  links.rs  lockfile.rs  mod.rs  panes.rs  registry.rs  runtime.rs  settings.rs  status.rs  update_check.rs
src/process/: mod.rs
src/server/: acp_reconciler.rs  auth.rs  cockpit_reconciler.rs  login.rs  mod.rs  pane.rs  push.rs  tunnel.rs  ws.rs
src/server/api/: acp.rs  mod.rs  plugins.rs  projects.rs  sessions.rs  system.rs
src/session/: builder.rs  capture.rs  config.rs  container_config.rs  deletion.rs  environment.rs  groups.rs  instance.rs  mod.rs  profile_config.rs  projects.rs  recovery.rs  repo_config.rs  scratch.rs  smart_rename.rs  storage.rs  trash.rs  worktree_edit.rs
src/session/settings_schema/: registry.rs
src/sound/: discovery.rs
src/tmux/: env.rs  mod.rs  session.rs  status_bar.rs  terminal_session.rs  test_helpers.rs  tool_session.rs  utils.rs  vt.rs
src/tui/: app.rs  creation_poller.rs  deletion_poller.rs  mod.rs  plugin_ui.rs
src/tui/cockpit_view/: reducer.rs
src/tui/components/: help.rs
src/tui/dialogs/: cheats.rs  command_palette.rs  context_menu.rs  delete_options.rs  hooks_install.rs  intro.rs  no_agents.rs  plugin_manager.rs  projects.rs  serve.rs  telemetry_consent.rs  tips.rs  update_confirm.rs
src/tui/home/: bindings.rs  file_watch_tests.rs  input.rs  live_send.rs  mod.rs  operations.rs  render.rs  tests.rs
src/tui/remote_home/: mod.rs  render.rs
src/tui/settings/: fields.rs  input.rs  mod.rs  render.rs
src/tui/structured_view/: mod.rs  reducer.rs  render.rs
src/tui/styles/: mod.rs
src/update/: install.rs  mod.rs
tests/: plugin_install.rs  serve_disk_reload_helper_equivalence.rs  tui_attach_detach.rs
tests/e2e/: archive_restore.rs  archive_structured.rs  cli.rs  harness.rs  kiro_launch.rs  main.rs  plugins.rs  project_registry.rs  serve.rs  settings.rs  tool_sessions.rs
tests/integration/: config_wiring.rs  parallel_capture.rs  session_id_acquisition.rs
tests/integration/common/: mod.rs
themes/builtin/: boa.toml
web/: .npmrc  DESIGN.md  index.html  package-lock.json  package.json
web/public/: manifest.json  sw.js
web/src/: App.tsx  index.css
web/src/components/: AboutModal.tsx  ContentSplit.tsx  Dashboard.tsx  DashboardUpdateBanner.tsx  DeleteSessionDialog.tsx  HelpOverlay.tsx  LoginPage.tsx  McpServers.tsx  MobileLiveTerminal.tsx  MobileMainPane.tsx  PairedTerminal.tsx  (+13 more)
web/tests/: backspace-autorepeat.spec.ts  command-palette.spec.ts  coverage-matrix.exempt.json  coverage-matrix.json  dashboard.spec.ts  init-resize-storm.spec.ts  ios-callout-suppression.spec.ts  keyboard-auto-resize.spec.ts  keyboard-resize-stickiness.spec.ts  mobile-keyboard.spec.ts  mobile-plugin-pane.spec.ts  mobile-right-panel-picker.spec.ts  paired-hidden-resize.spec.ts  pinch-zoom-desktop.spec.ts  pinch-zoom.spec.ts  plugin-row-slots-mobile.spec.ts  scrollback-exit.spec.ts  session-trash-flow.spec.ts  sidebar-multi-select.spec.ts  terminal-focus-shortcut.spec.ts  terminal-ime.spec.ts  top-bar.spec.ts  wheel-scroll.spec.ts  ws-reconnect.spec.ts
website/scripts/: sync-docs.mjs
xtask/: Cargo.toml
xtask/src/: main.rs
(+176 files in other folders)
