[workspace]
members = [".", "xtask"]

[package]
name = "agent-of-empires"
version = "1.8.0"
edition = "2021"
rust-version = "1.85"
authors = ["Agent of Empires Contributors"]
description = "Terminal session manager for AI coding agents"
license = "MIT"
repository = "https://github.com/njbrake/agent-of-empires"
keywords = ["tmux", "tui", "ai", "claude", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.6", features = ["derive", "env"] }
clap_complete = "4.5"

# TUI
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
ansi-to-tui = "8.0"
ratatui-textarea = "0.9"
tui-input = "0.15"

# Async runtime
tokio = { version = "1.52", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.1"
toml_edit = "0.23"

# File watching
notify = "8.2"

# PTY handling
portable-pty = "0.9"

# Fuzzy matching
nucleo-matcher = "0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.23", features = ["v4"] }

# Random
rand = "0.10"

# Directory utilities
dirs = "6.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for updates)
reqwest = { version = "0.13", features = ["json", "rustls", "stream"], default-features = false }

# Unix sockets + futures-compat for ACP byte streams
tokio-util = { version = "0.7", features = ["codec", "compat"] }

# Platform detection
cfg-if = "1.0"

# Process handling
nix = { version = "0.31", features = ["signal", "process", "net", "fs", "resource"] }

# Unicode width + normalization (NFKD used to fold accents in title-derived branch names)
unicode-normalization = "0.1"
unicode-width = "0.2"

# Terminal spinners
rattles = "0.3"

# Regex
regex = "1.10"

# Git operations
git2 = { version = "0.20", features = ["vendored-openssl"] }

# Diff computation
similar = "3.1"

# Hashing
sha2 = "0.11"

# File locking
fs2 = "0.4"

# Stream utilities (for crossterm EventStream)
futures-util = "0.3"

# Temporary files and directories
tempfile = "3.14"

# PATH lookup for external viewers (lnav, bat, less) used by `aoe logs`.
which = "8.0"

# Local SQLite reader for opencode's session store. Bundled to avoid a
# system libsqlite3 dependency. Used to read session state without spawning
# `opencode session list`, which leaks a 4.5MB /tmp/.<hash>.so per invocation
# via opencode's bun:ffi OpenTUI extract path (see anomalyco/opencode#6523).
rusqlite = { version = "0.39", features = ["bundled"] }

# Web server (optional, behind "serve" feature)
axum = { version = "0.8", features = ["ws"], optional = true }
# Cross-platform browser launcher for `aoe serve --open`.
webbrowser = { version = "1", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
rust-embed = { version = "8", features = ["debug-embed"], optional = true }
mime_guess = { version = "2.0", optional = true }
qrcode = { version = "0.14", optional = true }
argon2 = { version = "0.5", optional = true }
subtle = { version = "2", optional = true }

# Web Push (VAPID + payload encryption), optional behind "serve".
p256 = { version = "0.13", features = ["pem", "pkcs8", "ecdsa", "ecdh"], optional = true }
base64 = { version = "0.22", optional = true }
hkdf = { version = "0.13", optional = true }
aes-gcm = { version = "0.10", optional = true }
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"], optional = true }
getrandom = { version = "0.4", optional = true }

# Agent Client Protocol — drives the cockpit surface bundled with `serve`.
agent-client-protocol = { version = "0.11", optional = true, features = ["unstable_session_usage"] }
agent-client-protocol-tokio = { version = "0.11", optional = true }

# Semver parsing for ACP adapter compatibility checks (see src/cockpit/agent_compat.rs).
semver = { version = "1", optional = true }

# Node tarball download + extraction for the cockpit's bundled-Node
# fallback. xz2 needs the system liblzma; we use it for tar.xz
# extraction. The `tar` crate handles the tarball stream. Hex used
# for nonce display lives in the cockpit/approvals module's local
# hex helper, no crate needed.
tar = { version = "0.4", optional = true }
xz2 = { version = "0.1", optional = true }

# WebSocket client for the cockpit-in-TUI view: subscribes to the daemon's
# `/sessions/{id}/cockpit/ws` stream and pumps frames into the local reducer.
# Folded into the `serve` feature alongside the rest of the cockpit surface;
# the daemon itself uses axum's built-in WS support and never pulls this in.
tokio-tungstenite = { version = "0.29", default-features = false, features = ["rustls-tls-webpki-roots", "connect"], optional = true }

[features]
default = []
# Re-exports private tmux env helpers via `crate::tmux::test_support` so that
# integration tests in `tests/` can poke them. Not enabled by default — only
# used by `cargo test`.
test-support = []
serve = [
    "axum",
    "tower-http",
    "rust-embed",
    "mime_guess",
    "qrcode",
    "argon2",
    "subtle",
    "p256",
    "base64",
    "hkdf",
    "aes-gcm",
    "jsonwebtoken",
    "getrandom",
    "webbrowser",
    # Cockpit (ACP-based structured rendering of agent state) ships
    # alongside the web dashboard — the two share state, REST routes,
    # and the WebSocket fanout. Folded into `serve` so building the
    # dashboard always includes the cockpit surface; pulling them
    # apart later is straightforward (cockpit code lives entirely
    # under src/cockpit/).
    "agent-client-protocol",
    "agent-client-protocol-tokio",
    "semver",
    "tar",
    "xz2",
    "tokio-tungstenite",
]

[dev-dependencies]
serial_test = "3.4"
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt"] }
# Test-only axum dep, used by the update e2e fixture server that serves
# a fake release tarball. The runtime code uses reqwest, not axum.
axum = { version = "0.8", features = ["ws"] }
# Self-dev-dependency: enables the `test-support` feature when building
# integration tests so they can reach `crate::tmux::test_support`. This is
# the standard Cargo pattern for opt-in test-only re-exports; the lib build
# (and release binaries) never see the feature.
agent-of-empires = { path = ".", features = ["test-support"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 16
# Land on the release namespace (app dir, tmux prefix, serve port) so a
# fast-compiled dev-release binary shares state with installed release
# builds. Use the default `dev` profile when you want the isolated
# `-dev` namespace.
debug-assertions = false

[[bin]]
name = "aoe"
path = "src/main.rs"
