[workspace]
members = [".", "xtask", "aoe-settings-derive", "aoe-plugin-api"]

[package]
name = "agent-of-empires"
version = "1.12.0"
edition = "2021"
rust-version = "1.85"
authors = ["Agent of Empires Contributors"]
description = "Terminal session manager for AI coding agents"
license = "MIT"
repository = "https://github.com/agent-of-empires/agent-of-empires"
keywords = ["tmux", "tui", "ai", "claude", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.6", features = ["derive", "env", "string"] }
clap_complete = "4.6"

# TUI
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
ansi-to-tui = "8.0"
# In-process VT emulator for the default live-preview path (`src/tmux/vt.rs`,
# opt out with `AOE_VT_LIVE=0`): parse a pane's raw byte stream into an owned
# grid instead of scraping `capture-pane` snapshots.
vt100 = "0.16"
ratatui-textarea = "0.9"
tui-input = "0.15"
# Markdown parsing for the structured view transcript. We map events to ratatui
# Lines ourselves (see src/tui/structured_view/render.rs) so raw markers are
# stripped and styling tracks the app theme; default-features = false
# drops the unused HTML renderer.
pulldown-cmark = { version = "0.13", default-features = false }

# Async runtime
tokio = { version = "1.52", features = ["full"] }

# Settings single-source-of-truth derive (#1692)
aoe-settings-derive = { path = "aoe-settings-derive" }

# Plugin manifest and capability types (#268)
aoe-plugin-api = { path = "aoe-plugin-api" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.1"
toml_edit = "0.25"

# File watching
notify = "8.2"

# PTY handling
portable-pty = "0.9"

# Fuzzy matching
nucleo-matcher = "0.3"

# Shell-style splitting of custom-agent ACP command strings into argv
shell-words = "1.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.23", features = ["v4"] }

# Random
rand = "0.10"

# Directory utilities
dirs = "6.0"

# Glob expansion for sandbox volume_ignores patterns (e.g. `**/bin`, `**/obj`)
glob = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for updates)
reqwest = { version = "0.13", features = ["json", "rustls", "stream"], default-features = false }

# Percent-encode path segments (release tags) for GitHub API URLs.
percent-encoding = "2"

# Unix sockets + futures-compat for ACP byte streams
tokio-util = { version = "0.7", features = ["codec", "compat"] }

# Process handling
nix = { version = "0.31", features = ["signal", "process", "net", "fs", "resource", "dir", "user"] }

# Unicode width + normalization (NFKD used to fold accents in title-derived branch names)
unicode-normalization = "0.1"
unicode-width = "0.2"

# Terminal spinners
rattles = "0.3"

# Regex
regex = "1.10"

# Git operations
git2 = { version = "0.21", features = ["vendored-openssl"] }

# Diff computation
similar = "3.1"

# Hashing
sha2 = "0.11"

# File locking
fs2 = "0.4"

# Stream utilities (for crossterm EventStream)
futures-util = "0.3"

# Temporary files and directories
tempfile = "3.14"

# PATH lookup for external viewers (lnav, bat, less) used by `aoe logs`.
which = "8.0"

# Local SQLite reader for opencode's session store. Bundled to avoid a
# system libsqlite3 dependency. Used to read session state without spawning
# `opencode session list`, which leaks a 4.5MB /tmp/.<hash>.so per invocation
# via opencode's bun:ffi OpenTUI extract path (see anomalyco/opencode#6523).
rusqlite = { version = "0.40", features = ["bundled"] }

# Web server (optional, behind "serve" feature)
axum = { version = "0.8", features = ["ws"], optional = true }
# Cross-platform browser launcher for `aoe serve --open`.
webbrowser = { version = "1", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
rust-embed = { version = "8", features = ["debug-embed"], optional = true }
mime_guess = { version = "2.0", optional = true }
qrcode = { version = "0.14", optional = true }
argon2 = { version = "0.5", optional = true }
subtle = { version = "2", optional = true }

# Always-on: used by the TUI for OSC 52 clipboard writes (preview
# drag-select in live mode) and re-exported via the `serve` feature
# for Web Push payload encoding.
base64 = "0.22"

# Web Push (VAPID + payload encryption), optional behind "serve".
p256 = { version = "0.13", features = ["pem", "pkcs8", "ecdsa", "ecdh"], optional = true }
hkdf = { version = "0.13", optional = true }
aes-gcm = { version = "0.10", optional = true }
jsonwebtoken = { version = "10.4", features = ["aws_lc_rs"], optional = true }
getrandom = { version = "0.4", optional = true }

# Agent Client Protocol — drives the structured view surface bundled with `serve`.
agent-client-protocol = { version = "0.14", optional = true, features = ["unstable_end_turn_token_usage", "unstable_elicitation", "unstable_session_fork"] }

# Semver parsing for ACP adapter compatibility checks (see src/acp/agent_compat.rs).
semver = { version = "1", optional = true }

# Tar stream handling. Used by the structured view's bundled-Node fallback
# (with xz2 for tar.xz) and by external plugin install (with flate2 for
# tar.gz). The `tar` and `flate2` crates are pure Rust and unconditional so
# plugin install works in a TUI-only build; xz2 needs system liblzma and stays
# gated to the structured view (serve).
tar = "0.4"
flate2 = "1"
xz2 = { version = "0.1", optional = true }

# WebSocket client for the structured view-in-TUI view: subscribes to the daemon's
# `/sessions/{id}/acp/ws` stream and pumps frames into the local reducer.
# Folded into the `serve` feature alongside the rest of the structured view surface;
# the daemon itself uses axum's built-in WS support and never pulls this in.
tokio-tungstenite = { version = "0.29", default-features = false, features = ["rustls-tls-webpki-roots", "connect"], optional = true }

# Unix-only: O_NOFOLLOW for race-free plugin-tree reads/copies (no std constant).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# Lean by default: a plain `cargo build` needs no Node/npm. `serve` (the web
# dashboard) stays opt-in (`cargo build --features serve`); the aoe.web builtin
# rides along with it. Released binaries are built `--features serve`, so every
# distributed binary ships the dashboard. `default-plugins` stays on by default
# so the bundled-plugin set is the norm for source builds; it currently gates
# nothing on its own (aoe.web needs `serve`), but reserves the on-by-default
# slot for first-party plugins that do not require the dashboard.
default = ["default-plugins"]
# Re-exports private tmux env helpers via `crate::tmux::test_support` so that
# integration tests in `tests/` can poke them. Not enabled by default — only
# used by `cargo test`.
test-support = []
# Compile in the bundled first-party plugins. Build the bare core (acceptance
# criterion 1 of #268) by opting out with `--no-default-features`.
default-plugins = []
# Gates the `e2e` test target (tests/e2e/main.rs). Off by default so CI can run
# the serve suite as two parallel shards without enumerating every non-e2e test
# binary: `cargo test --features serve` runs everything except e2e (the target
# is skipped when the feature is off), and `cargo test --features serve,e2e-tests
# --test e2e` runs e2e only. Run the full serve suite locally with
# `cargo test --features serve,e2e-tests`. Naming the target explicitly
# (`cargo test --test e2e`) without the feature errors loudly rather than
# skipping silently.
e2e-tests = []
serve = [
    "axum",
    "tower-http",
    "rust-embed",
    "mime_guess",
    "qrcode",
    "argon2",
    "subtle",
    "p256",
    "hkdf",
    "aes-gcm",
    "jsonwebtoken",
    "getrandom",
    "webbrowser",
    # Structured view (ACP-based structured rendering of agent state) ships
    # alongside the web dashboard — the two share state, REST routes,
    # and the WebSocket fanout. Folded into `serve` so building the
    # dashboard always includes the structured view surface; pulling them
    # apart later is straightforward (structured view code lives entirely
    # under src/acp/).
    "agent-client-protocol",
    "semver",
    "xz2",
    "tokio-tungstenite",
]

[dev-dependencies]
serial_test = "3.4"
# Integration tests are separate crates and don't inherit the normal
# `serde_json` dependency; the acp-runner orphan test parses a worker
# registry record to mutate its pid structurally.
serde_json = "1.0"
# Integration tests are separate crates and don't inherit the normal `toml`
# dependency; the build-cache guard test parses .cargo/config.toml.
toml = "1.1"
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt"] }
# Test-only axum dep, used by the update e2e fixture server that serves
# a fake release tarball. The runtime code uses reqwest, not axum.
axum = { version = "0.8", features = ["ws"] }
# Self-dev-dependency: enables the `test-support` feature when building
# integration tests so they can reach `crate::tmux::test_support`. This is
# the standard Cargo pattern for opt-in test-only re-exports; the lib build
# (and release binaries) never see the feature. `default-features = false`
# matters: without it this entry re-enables the default `serve` feature
# under `cargo test --no-default-features`, making that CI job meaningless.
agent-of-empires = { path = ".", default-features = false, features = ["test-support"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 16
# Land on the release namespace (app dir, tmux prefix, serve port) so a
# fast-compiled dev-release binary shares state with installed release
# builds. Use the default `dev` profile when you want the isolated
# `-dev` namespace.
debug-assertions = false

[[test]]
# Explicit target so the `e2e-tests` feature gate applies. Without this entry
# Cargo auto-discovers tests/e2e/main.rs unconditionally; the gate lets CI split
# the serve suite into "everything except e2e" and "e2e only" shards. The other
# 16 test binaries stay auto-discovered.
name = "e2e"
path = "tests/e2e/main.rs"
required-features = ["e2e-tests"]

[[bin]]
name = "boa"
path = "src/main.rs"

# Compatibility alias: existing scripts that invoke `aoe` keep working.
# Same source as the primary `boa` binary.
[[bin]]
name = "aoe"
path = "src/main.rs"
